@@ -1,7 +1,12 @@
+<b>Version 2.4.7:</b><br/><br/>
+    &#8226; Fix for refresh on startup<br/>
+    &#8226; Better restoring of settings backups<br/>
+    &#8826; Other stability and performance improvements<br/>
+<br/><br/>
+
 <b>Version 2.4.6.1:</b><br/><br/>
     &#8226; Force close on drafts<br/>
 <br/><br/>
-
 
 <b>Version 2.4.6:</b><br/><br/>
     &#8226; Fix re-searching<br/>
